--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -2,21 +2,25 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-.gallery {
-  display: grid;
-  /* grid-template-columns: 200px 200px 200px; */
-  /* grid-template-columns: repeat(3, 200px); // 3 columns */
-  /* grid-template-columns: repeat(auto-fill, 300px); */
-  /* grid-template-columns: repeat(auto-fit, 300px); */
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+main {
+  display: flex;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
-.gallery img {
-  max-width: 100%;
-  min-height: 100%;
+main .menu {
+  margin: 5px;
+}
+
+main .menu .menu-item {
+  background-color: teal;
+  background-image: linear-gradient(to right, teal, aqua);
+  padding: 20px;
+  font-size: 2rem;
+  color: white;
+  text-decoration: none;
 }
