--- a/web-design-business/style.css
+++ b/web-design-business/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,6 +11,8 @@
 body {
   font: 16px/1.5 "Roboto", sans-serif; /* line-height: 1.5 */
   background-color: #f1f3f5;
+  height: 100vh;
+  overflow: hidden;
 }
 
 /* Global */
